<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/navigation_header_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:src="@mipmap/person_background2"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_header"
        android:layout_width="@dimen/navigation_header_icon_height"
        android:layout_height="@dimen/navigation_header_icon_height"
        android:layout_marginLeft="@dimen/navigation_header_icon_margin"
        android:layout_marginStart="30dp"
        android:layout_marginTop="126dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_header"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/navigation_header_icon_margin"
        android:layout_marginRight="@dimen/navigation_header_icon_margin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="cherise"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_personal_center"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_person_center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/personalcenter"
                android:textColor="@color/colorContent"
                android:textSize="15sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/itemLowBackground"></View>

        <LinearLayout
            android:id="@+id/ll_project_introduction"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_person_introduce"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/projectintroduction"
                android:textColor="@color/colorContent"
                android:textSize="15sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/itemLowBackground"></View>

        <LinearLayout
            android:id="@+id/ll_personal_service"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_person_service"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/service"
                android:textColor="@color/colorContent"
                android:textSize="15sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/itemLowBackground"></View>

        <LinearLayout
            android:id="@+id/ll_personal_invite"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_person_invite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/invite"
                android:textColor="@color/colorContent"
                android:textSize="15sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/itemLowBackground"></View>


        <LinearLayout
            android:id="@+id/ll_personal_transfiguration"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_person_transfigura"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/transfiguration"
                android:textColor="@color/colorContent"
                android:textSize="15sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/itemLowBackground"></View>

        <LinearLayout
            android:id="@+id/ll_personal_exit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_person_exit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/exit"
                android:textColor="@color/colorContent"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>